# repolens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repolens/: __init__.py  analyzer.py  cli.py  gitstats.py  graph.py  health.py  htmlreport.py  languages.py  scanner.py  security.py  terminal.py
src/repolens/assets/: template.html
tests/: test_repolens.py
